browser/themes/shared/devtools/webconsole.inc.css
.
webconsole
-
timestamp
{
color
:
GrayText
;
margin
-
top
:
0
;
margin
-
bottom
:
0
;
font
-
family
:
monospace
;
}
.
hud
-
msg
-
node
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
devtools
/
webconsole
.
png
)
;
-
moz
-
image
-
region
:
rect
(
0
1px
0
0
)
;
}
.
webconsole
-
msg
-
icon
{
margin
:
3px
4px
;
width
:
8px
;
height
:
8px
;
}
.
hud
-
clickable
{
cursor
:
pointer
;
text
-
decoration
:
underline
;
}
.
webconsole
-
msg
-
body
{
margin
-
top
:
0
;
margin
-
bottom
:
3px
;
-
moz
-
margin
-
start
:
3px
;
-
moz
-
margin
-
end
:
6px
;
white
-
space
:
pre
-
wrap
;
font
-
family
:
monospace
;
}
.
webconsole
-
msg
-
body
-
piece
{
margin
:
0
;
}
.
webconsole
-
msg
-
url
{
margin
:
0
6px
;
}
.
webconsole
-
msg
-
repeat
{
margin
:
2px
0
;
padding
-
left
:
4px
;
padding
-
right
:
4px
;
color
:
white
;
background
-
color
:
red
;
border
-
radius
:
40px
;
font
:
message
-
box
;
font
-
size
:
0
.
9em
;
font
-
weight
:
600
;
}
.
webconsole
-
msg
-
repeat
[
value
=
"
1
"
]
{
display
:
none
;
}
.
webconsole
-
location
{
margin
-
top
:
0
;
margin
-
bottom
:
0
;
-
moz
-
margin
-
start
:
0
;
-
moz
-
margin
-
end
:
6px
;
width
:
10em
;
text
-
align
:
end
;
}
.
webconsole
-
mixed
-
content
{
color
:
#
FF0000
;
}
.
webconsole
-
mixed
-
content
-
link
{
color
:
#
0000EE
;
margin
:
0
;
}
.
hud
-
msg
-
node
[
selected
=
"
true
"
]
>
.
webconsole
-
timestamp
.
hud
-
msg
-
node
[
selected
=
"
true
"
]
>
.
webconsole
-
location
{
color
:
inherit
;
}
.
jsterm
-
input
-
node
.
jsterm
-
complete
-
node
{
font
-
family
:
monospace
;
}
.
hud
-
output
-
node
{
-
moz
-
appearance
:
none
;
border
-
bottom
:
1px
solid
ThreeDShadow
;
margin
:
0
;
}
.
hud
-
filtered
-
by
-
type
.
hud
-
filtered
-
by
-
string
{
display
:
none
;
}
.
hidden
-
message
{
display
:
block
;
visibility
:
hidden
;
height
:
0
;
overflow
:
hidden
;
}
.
webconsole
-
filter
-
button
{
-
moz
-
user
-
focus
:
normal
;
}
.
webconsole
-
filter
-
button
[
checked
]
{
color
:
white
!
important
;
}
.
webconsole
-
filter
-
button
>
.
toolbarbutton
-
menubutton
-
button
:
before
{
content
:
"
"
;
display
:
inline
-
block
;
height
:
8px
;
width
:
8px
;
border
-
radius
:
50
%
;
margin
-
left
:
5px
;
border
-
width
:
1px
;
border
-
style
:
solid
;
}
.
webconsole
-
filter
-
button
[
category
=
"
net
"
]
>
.
toolbarbutton
-
menubutton
-
button
:
before
{
background
-
image
:
linear
-
gradient
(
#
444444
#
000000
)
;
border
-
color
:
#
777
;
}
.
webconsole
-
msg
-
network
>
.
webconsole
-
msg
-
icon
-
container
{
-
moz
-
border
-
start
:
solid
#
000
6px
;
}
.
webconsole
-
msg
-
network
.
webconsole
-
msg
-
error
{
-
moz
-
image
-
region
:
rect
(
0
16px
8px
8px
)
;
}
.
webconsole
-
filter
-
button
[
category
=
"
css
"
]
>
.
toolbarbutton
-
menubutton
-
button
:
before
{
background
-
image
:
linear
-
gradient
(
#
2DC3F3
#
00B6F0
)
;
border
-
color
:
#
1BA2CC
;
}
.
webconsole
-
msg
-
cssparser
>
.
webconsole
-
msg
-
icon
-
container
{
-
moz
-
border
-
start
:
solid
#
00b6f0
6px
;
}
.
webconsole
-
msg
-
cssparser
.
webconsole
-
msg
-
error
{
-
moz
-
image
-
region
:
rect
(
8px
16px
16px
8px
)
;
}
.
webconsole
-
msg
-
cssparser
.
webconsole
-
msg
-
warn
{
-
moz
-
image
-
region
:
rect
(
8px
24px
16px
16px
)
;
}
.
webconsole
-
filter
-
button
[
category
=
"
js
"
]
>
.
toolbarbutton
-
menubutton
-
button
:
before
{
background
-
image
:
linear
-
gradient
(
#
FCB142
#
FB9500
)
;
border
-
color
:
#
E98A00
;
}
.
webconsole
-
msg
-
exception
>
.
webconsole
-
msg
-
icon
-
container
{
-
moz
-
border
-
start
:
solid
#
fb9500
6px
;
}
.
webconsole
-
msg
-
exception
.
webconsole
-
msg
-
error
{
-
moz
-
image
-
region
:
rect
(
16px
16px
24px
8px
)
;
}
.
webconsole
-
msg
-
exception
.
webconsole
-
msg
-
warn
{
-
moz
-
image
-
region
:
rect
(
16px
24px
24px
16px
)
;
}
.
webconsole
-
filter
-
button
[
category
=
"
logging
"
]
>
.
toolbarbutton
-
menubutton
-
button
:
before
{
background
-
image
:
linear
-
gradient
(
#
B9B9B9
#
AAAAAA
)
;
border
-
color
:
#
929292
;
}
.
webconsole
-
msg
-
console
>
.
webconsole
-
msg
-
icon
-
container
{
-
moz
-
border
-
start
:
solid
#
cbcbcb
6px
;
}
.
webconsole
-
msg
-
console
.
webconsole
-
msg
-
error
.
webconsole
-
msg
-
output
.
webconsole
-
msg
-
error
{
-
moz
-
image
-
region
:
rect
(
24px
16px
32px
8px
)
;
}
.
webconsole
-
msg
-
console
.
webconsole
-
msg
-
warn
{
-
moz
-
image
-
region
:
rect
(
24px
24px
32px
16px
)
;
}
.
webconsole
-
msg
-
console
.
webconsole
-
msg
-
info
{
-
moz
-
image
-
region
:
rect
(
24px
32px
32px
24px
)
;
}
.
webconsole
-
msg
-
input
>
.
webconsole
-
msg
-
icon
-
container
.
webconsole
-
msg
-
output
>
.
webconsole
-
msg
-
icon
-
container
{
border
-
left
:
solid
#
808080
6px
;
}
.
webconsole
-
msg
-
input
{
-
moz
-
image
-
region
:
rect
(
24px
40px
32px
32px
)
;
}
.
webconsole
-
msg
-
output
{
-
moz
-
image
-
region
:
rect
(
24px
48px
32px
40px
)
;
}
.
jsterm
-
input
-
node
.
jsterm
-
complete
-
node
{
border
:
none
;
padding
:
0
0
0
16px
;
-
moz
-
appearance
:
none
;
}
.
jsterm
-
input
-
node
{
background
:
-
moz
-
image
-
rect
(
url
(
"
chrome
:
/
/
browser
/
skin
/
devtools
/
commandline
-
icon
.
png
"
)
0
32
16
16
)
no
-
repeat
;
}
:
-
moz
-
any
(
.
jsterm
-
input
-
node
.
jsterm
-
complete
-
node
)
>
.
textbox
-
input
-
box
>
.
textbox
-
textarea
{
overflow
-
x
:
hidden
;
}
.
jsterm
-
complete
-
node
>
.
textbox
-
input
-
box
>
.
textbox
-
textarea
{
color
:
GrayText
;
}
.
webconsole
-
msg
-
inspector
iframe
{
height
:
7em
;
margin
-
bottom
:
15px
;
-
moz
-
margin
-
end
:
15px
;
border
-
radius
:
4px
;
box
-
shadow
:
0
0
12px
#
dfdfdf
;
}
#
webconsole
-
sidebar
>
tabs
{
height
:
0
;
border
:
none
;
}
.
webconsole
-
msg
-
security
>
.
webconsole
-
msg
-
icon
-
container
{
-
moz
-
border
-
start
:
solid
red
6px
;
}
.
webconsole
-
filter
-
button
[
category
=
"
security
"
]
>
.
toolbarbutton
-
menubutton
-
button
:
before
{
background
-
image
:
linear
-
gradient
(
#
FF3030
#
FF7D7D
)
;
border
-
color
:
#
D12C2C
;
}
.
webconsole
-
msg
-
security
.
webconsole
-
msg
-
error
{
-
moz
-
image
-
region
:
rect
(
32px
16px
40px
8px
)
;
}
.
webconsole
-
msg
-
security
.
webconsole
-
msg
-
warn
{
-
moz
-
image
-
region
:
rect
(
32px
24px
40px
16px
)
;
}

